styles.css
:root{
    --bg-article: white;


    --text-colorLight: rgb(255, 255, 255);
    --text-colorDark: #202044;
    --text-colorMiddle: rgb(66, 66, 66);

    --highlight-color: orange;

    --shadow: rgba(97, 97, 97, 0.548);

    --colorOne: #898AA6;
    --colorTwo: #C9BBCF;
    --colorThree: #B7D3DF;
    --colorFour: #D6EFED; 
    --colorFive: #202044;
    --colorSix: #20204475;
    
    --font: 'Open Sans', sans-serif;
    --font-regular: 400;
    --font-bold: 600;
}

body{
    margin:0;
}

p{
    font-family: var(--font);
}

/* misc */
#container{

    /*border: 1px solid red;*/
    height: 100vh;

    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 4fr;
}


.logo, .navOne, .navTwo{
    /*border: 1px solid green;*/
    background-color: var(--colorFive);
    color: var(--text-colorLight);
}

.logo{
    display: flex;
    flex-direction: row;
    align-items: center;
    font-size: 20px;
    font-weight: bold;
}

#sidebar{
    grid-column: 1/2;
    grid-row: 1/3;

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 10vh 30vh 1fr;


    z-index: 2;
}

#header{
    grid-column: 2/3;
    grid-row: 1/2;

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto 2fr;

    z-index: 1;

    background-color: white;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.164);


    color: var(--text-colorDark);
    
}

#main{
    grid-column: 2/3;
    grid-row: 2/3;

    display:grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr auto;

    column-gap: 1.1vw;
    background-color: whitesmoke
}

li{
    display: grid;
    grid-template-columns: auto 1fr;
    column-gap: 20px;
    list-style: none;    
    align-items: center;
}

.side-icon{
    height: 25px;
    width: 25px;
}

p{
    margin: 0;
}

/* header TOP */

.topHeader > *{
    /*border: 1px solid rgb(26, 9, 105);*/
}

.bottomHeader{
    /*border: 1px solid rgb(136, 114, 233);*/
}

.topHeader{
    display: grid;
    grid-template-columns: 40px 1fr 10vw 40px 40px auto;
    column-gap: 10px;
    margin: 2vh 2vw 0vh 5vw;
    align-items: center;  
} 

.searchIcon, .alarmIcon{
    height: clamp(30px, 2vw, 35px);
    width: clamp(30px, 2vw, 35px);
}

.searchIcon{
    grid-column: 1/2;
}

.profileIcon{
    height: clamp(45px, 2vw, 50px);
    width: clamp(45px, 2vw, 50px);
}

.searchBar, .username{
    width: 100%;
}

.searchBar{
    height: 38px;
    width: clamp(100px, 50%, 1fr);
    border: 2px solid var(--colorSix);
    background-color: white;
    border-radius: 20px;
    grid-column: 2/3;
}

.username{
    height: 40px;
    display: grid;
    align-content: center;
    grid-column: 6/7;

    font-weight: var(--font-bold);
}

.alarmIcon{
    grid-column: 4/5;
}

.profileIcon{
    grid-column: 5/6;
}

.useText{
    padding: 0 0 0 1vw;
}

/* header Bottom */
.bottomHeader{
    display: grid;
    grid-template-columns: 80px 1fr 340px;
    margin: 2vh 2vw 1vh 5vw;
    align-items: center;  
}

.bottomHeader ul{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    /*border: 2px solid rgba(255, 0, 0, 0.219);*/
    margin: 0;
    justify-items:end
}

.bottomHeader ul li{
    display: grid;
    align-items: center;
    justify-content: end;
}

.bottomNavButtons{
    grid-column: 3/4;
}

button{
    height: 40px;
    width: 100px;

    border: var(--colorThree) 1px solid;
    border-radius: 20px;

    
    background-color: var(--colorFive);    
    color: white;

    font-weight: var(--font-bold);
    font-size: 18px;

    /*
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.164);
    */
}

.profileIconLarge{
    height: 80px;
    width: 80px;
}

.bottomHeaderText{
    display: grid;
    margin: 0 0 0 1vw;
    align-content: center;
    grid-column: 2/3;
}

.greeting{
    font-size: clamp(15px, 1.5vw, 22px);
    margin: 0;
    padding: 0 0 5px 0;
}

.fullUsername{
    font-size: clamp(20px, 1.5vw, 30px);    
    font-weight: bold;
    margin: 0;
}



/* sidebar */
.icon{
    border: 2px solid white;
    height: 40px;
    width: 40px;
    margin: 0 1vw 0 1.5vw;
}

ul{
    padding-inline-start: 0px
}

.navOne ul li, .navTwo ul li{
    font-size: clamp(8px, 2.5vw, 20px);
    margin: 0 0 0 1.5vw;
}

.navOne ul{
    display: grid;
    height: 90%;
    align-items: space-between;
}

.navTwo ul li{
    margin: 1.5vh 0 1.5vh 1.5vw;
}

/* main left*/

.projectDiv, .announceDiv, .trendDiv{
    display: flex;
    align-items: end;
}

.textHead{
    margin: 0 0 1vh 0;

    font-weight: var(--font-bold);
    font-size: clamp(18px, 1.5vw, 25px);

    color: var(--text-colorDark);
}

.title{
    padding: 0 0 0.9vh 0;
    font-size: clamp(15px, 1vw, 18px);
    font-weight: var(--font-bold);
}

.content{
    font-size: clamp(12px, 0.7vw, 14px);
    color: var(--text-colorMiddle);

}

.leftContent{
    /*border: 1px solid white;*/

    grid-column: 1/2;
    grid-row: 1/3;

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 6vh 1fr;

    padding: 0 0 0vh 0;

    margin: 1.2vh 0 2vh 2vw;
}

.projectDiv{
    height: 5vh;
}

.articles{
    /*border: 1px solid rgb(189, 23, 23);*/
    display: grid;

    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr auto;
    
    justify-content: end;
    align-items: space-between;

    gap: 1.2vh 1.2vh;
    margin: 0 0 0px 0;
}

.article{
    height: 20vh;
    display: grid;

    grid-template-columns: 1fr;
    grid-template-rows: 1fr 3fr 1fr;

    border-left: 8px solid var(--colorOne);
    border-radius: 10px;
    
    padding: 1vh 0 1vh 0;

    background-color: var(--bg-article);

    box-shadow: 0 5px 5px rgba(128, 128, 128, 0.205);
}


.artHead{
    font-weight: var(--font-bold);
    padding: 0.5vh 0 0 20px;
}

.artBody{
    padding: 0 0 0 0;
    color: var(--text-colorMiddle);
    margin: 0.5vh 2vw 0 1vw;

    font-size: clamp(12px, 0.7vw, 14px);

}

.artIcons{
    display: grid;
    grid-template-columns: 1fr 25px 25px 25px;
    grid-template-rows: 1fr;
    column-gap: 1vw;
    justify-content: end;
    align-items: center;
    padding: 0 1vw;
}

.artIcons > :nth-child(1){
    grid-column: 2/3;
}

.artTitle{
    font-size: clamp(15px, 1vw, 20px);
}

.news{
    /*border: 1px solid blue;*/
    margin: 5px 3px 0px 0px;
    padding: 0 0 0px 10px;
}
/* right top*/

.rightContent{
    /*border: 1px solid pink;*/
    grid-column: 2/3;
    grid-row: 1/3;

    display: grid;

    grid-template-columns: 1fr;
    grid-template-rows: 1fr, 1fr;
    margin: 1.2vh 2vw 2vh 0;

}

.rightTop{
    /*border: 1px solid rgb(196, 144, 49);*/

    grid-column: 1/2;
    grid-row: 1/2;

    display: flex;
    flex-direction: column;
    justify-content:flex-start;


}


/* right Bottom*/
.rightBottom{
    /*border: 1px solid rgb(238, 255, 0);*/

    grid-column: 1/2;
    grid-row: 2/3;

    display: flex;
    flex-direction: column;
    margin: 0 0 0px 0;

    justify-content: space-between;

}

.announceDiv{
    height: 5vh;
}

.announcements{
    margin: 0 0 0 0;
    border: 1px solid white;

    background-color: var(--bg-article);
    border-radius: 10px;

    display: flex;
    flex-direction: column;
    justify-content: space-between;

    padding: 10px 10px 10px 10px;

    row-gap: 20px;
    font-size: clamp(15px, 1vw, 20px);

    background-color: var(--bg-article);
    border-radius: 10px;

    box-shadow: 0 5px 5px rgba(128, 128, 128, 0.205);

}

hr{
    display: block; 
    overflow: hidden; 
    border-style: inset; 
    border-width: 1px;
}

.trendDiv{
    height: 100%;

}

.trends{
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    padding: 8px 10px 8px 10px;

    row-gap: 5px;

    background-color: var(--bg-article);
    border-radius: 10px;

    box-shadow: 0 5px 5px rgba(128, 128, 128, 0.205);
}

.trend{
    display: grid;
    grid-template-columns: auto 4fr;

    font-size: clamp(12px, 1.5vw, 15px);
    column-gap: clamp(15px, 1vw, 20px);

    align-items: center;

    /*border: 1px solid black;*/
    margin: 5px 15px 0 10px;  
    padding: 0 10px 0 0px; 
}

.small-icon{
    height: clamp(20px, 1vw, 35px);
    width: clamp(20px, 1vw, 35px);
}

.twitterHandle{
    font-weight: bold;
    font-size: clamp(12px, 1vw, 15px);
    color: var(--text-colorMiddle);
}

.twitterUser{
    color: var(--text-colorMiddle);
    font-size: clamp(12px, 1vw, 15px);
}

.twit-icon{
    height: clamp(20px, 30px, 40px);
    width:  clamp(20px, 30px, 40px);
    justify-self: end;
}

